# GraphicsCode

./: .clang-format  .gitignore  CMakeLists.txt  CONAN_COMMANDS.md  README.md  build.bat  build.sh  conanfile.txt  verify_conan.bat  verify_conan.sh
script/: format_code.py
src/: color.h  graphics_renderer.cpp  graphics_renderer.h  main.cpp  pixels_buffer.cpp  pixels_buffer.h  sdl2_window.cpp  sdl2_window.h
src/animation/: animation.h  animator.cpp  animator.h  uv_scroll_animation.cpp  uv_scroll_animation.h
src/image/: image.cpp  image.h  image_loader.cpp  image_loader.h
src/math/: CMakeLists.txt  bounding_box.h  line.h  point.h  vector.h
src/primitive/: antialiased_line_primitive.cpp  antialiased_line_primitive.h  image_primitive.cpp  image_primitive.h  line_primitive.cpp  line_primitive.h  point_primitive.cpp  point_primitive.h  primitive.h  triangle_primitive.cpp  triangle_primitive.h
src/sprite/: sprite.cpp  sprite.h
src/texture/: texture.cpp  texture.h
